Portafolio Actualizado como mi informacion

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Winter Morillo</title>
+    <link rel="icon" href="icon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,10 +19,10 @@
                     <div class="hamburger"><div class="bar"></div></div>
                     <ul>
                         <li><a href="#" data-after="Home">Home</a></li>
-                        <li><a href="#" data-after="Services">Services</a></li>
-                        <li><a href="#" data-after="Projects">Projects</a></li>
-                        <li><a href="#" data-after="About">About</a></li>
-                        <li><a href="#" data-after="Contact">Contact</a></li>
+                        <li><a href="#services" data-after="Services">Services</a></li>
+                        <li><a href="#projects" data-after="Projects">Projects</a></li>
+                        <li><a href="#about" data-after="About">About</a></li>
+                        <li><a href="#contact" data-after="Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -49,42 +50,29 @@
         <div class="services container">
             <div class="service-top">
                 <h1 class="title">Serv<span>i</span>ces</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam facilis possimus tenetur hic voluptatem maiores reiciendis consequuntur rerum obcaecati sunt, suscipit, corrupti similique eligendi sapiente maxime nulla? Repellendus, dolore ad.</p>
+                <p>These are some of the areas in which I have worked so far, and the ones in which I am more experienced, of course there are others that I am 
+                    still working on them to improve.
+                </p>
             </div>
 
             <div class="service-bottom">
                 <div class="service-item">
                     <div class="icon">
                         <img src="https://img.icons8.com/external-others-bomsymbols-/91/000000/external-bubbles-flat-communication-others-bomsymbols-.png"/>
-                        <h2>Service 1</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quo architecto eligendi maxime voluptas, aperiam accusantium consequuntur eaque? Doloremque eveniet deserunt ullam sunt suscipit velit expedita eum dolores magnam dignissimos.</p>
+                        <h2>Web Develoment</h2>
+                        <p>I have a solid knowledge using HTML and CSS, which I am able to use to create the structure and create layouts depending on the client need.</p>
                     </div>
                 </div>
 
                 <div class="service-item">
                     <div class="icon">
                         <img src="https://img.icons8.com/external-others-bomsymbols-/91/000000/external-bubbles-flat-communication-others-bomsymbols-.png"/>
-                        <h2>Service 1</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quo architecto eligendi maxime voluptas, aperiam accusantium consequuntur eaque? Doloremque eveniet deserunt ullam sunt suscipit velit expedita eum dolores magnam dignissimos.</p>
+                        <h2>English Classes</h2>
+                        <p>I have been teaching english since 2019, and I have solid knowledge on how to teach others to learn the leanguage and how to use it in their 
+                            daily basics.
+                        </p>
                     </div>
                 </div>
-
-                <div class="service-item">
-                    <div class="icon">
-                        <img src="https://img.icons8.com/external-others-bomsymbols-/91/000000/external-bubbles-flat-communication-others-bomsymbols-.png"/>
-                        <h2>Service 1</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quo architecto eligendi maxime voluptas, aperiam accusantium consequuntur eaque? Doloremque eveniet deserunt ullam sunt suscipit velit expedita eum dolores magnam dignissimos.</p>
-                    </div>
-                </div>
-
-                <div class="service-item">
-                    <div class="icon">
-                        <img src="https://img.icons8.com/external-others-bomsymbols-/91/000000/external-bubbles-flat-communication-others-bomsymbols-.png"/>
-                        <h2>Service 1</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quo architecto eligendi maxime voluptas, aperiam accusantium consequuntur eaque? Doloremque eveniet deserunt ullam sunt suscipit velit expedita eum dolores magnam dignissimos.</p>
-                    </div>
-                </div>
-
             </div>
         </div>
     </section>
@@ -102,13 +90,18 @@
             <div class="all-projects">
                 <div class="project-item"> 
                     <div class="project-info">
-                        <h1>Project</h1>
-                        <h2>Coding is Love</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, tenetur? Minima nemo suscipit deserunt nihil inventore quo nesciunt laborum, temporibus, possimus in est tempore illum consequatur dolores quasi totam rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid nobis quasi praesentium repudiandae, autem deleniti nisi iste, sunt blanditiis fugiat tenetur. Cumque quisquam iure quidem nulla odio fugit pariatur corrupti!</p>
+                        <h1>Remember <span>That</span></h1>
+                        <h2>Go Premium</h2>
+                        <p>This is a static website, you will find a basic layout, to suscribe to a task manager, benefits of it, testomonies, 
+                            how to get the place where we have our offices and last but not least a contact section, in case you would like to
+                            contact us.
+                        </p>
+
+                        <a href="#" class="primary-cta">Visit</a>
                     </div>
 
                     <div class="project-img">
-                        <img src="./img/img-1.png" alt="img">
+                        <img src="img/Remeber that.png"  class="remember-picture"  alt="img">
                     </div>
                 </div>
 
@@ -170,14 +163,14 @@
         <div class="about container">
             <div class="col-left">
                 <div class="about-img">
-                    <img src="./img/img-2.png" alt="">
+                    <img src="./img/EncuadratE-2.jpg" alt="">
                 </div>
             </div>
 
             <div class="col-right">
                 <h1 class="title">About <span>Me</span></h1>
                 <h2>Front End Web Develoment</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos molestiae laudantium doloremque reprehenderit. Dignissimos ea animi saepe esse quia distinctio, debitis molestiae temporibus voluptates officia quasi commodi quam, perspiciatis molestias. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam soluta a at ipsam, adipisci facilis magnam doloribus deleniti quasi consequuntur reprehenderit aspernatur ducimus provident nisi laudantium vero expedita aperiam velit!</p>
+                <p>I graduated from System Engineer career. I have been teaching English since January 2019. Not only that, but I am a fast learner, and I am willing to learn when the need arises. So far I have a solid knowledge when it comes to HTML and CSS. So far I have a basic knowledge of JavaScript and continue learning every day about it. I am used to work under pressure. So far, I have been working in the call center industry for about 2 years now, which has helped me to develop my communications skill, since I need to deal with customers' issues and needs, I have held different positions, such as customer service and tech support representative, Back Office Agent, floor support, and Team Leader Supervisor.</p>
                 <a href="#" class="cta">Download Resume</a>
             </div>
         </div>
@@ -229,15 +222,15 @@
 
             <div class="social-icon">
                 <div class="social-item">
-                    <a href="#"><img src="./img/icons8-facebook-48.png" alt=""></a>
+                    <a href="https://www.facebook.com/winter.morillo/" target="_blank"><img src="./img/icons8-facebook-48.png" alt=""></a>
                 </div>
 
                 <div class="social-item">
-                    <a href="#"><img src="./img/icons8-instagram-48.png" alt=""></a>
+                    <a href="https://www.instagram.com/wintermorillo/" target="_blank"><img src="./img/icons8-instagram-48.png" alt=""></a>
                 </div>
 
                 <div class="social-item">
-                    <a href="#"><img src="./img/icons8-linkedin-48.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/winter-morillo-7a3028168/" target="_blank"><img src="./img/icons8-linkedin-48.png" alt=""></a>
                 </div>
             </div>
 
