Actulizacion de enlace

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             contact us.
                         </p>
 
-                        <a href="#" class="primary-cta">Visit</a>
+                        <a href="https://wintermorillo.github.io/Winter-NewProject/" class="primary-cta" target="_blank">Visit</a>
                     </div>
 
                     <div class="project-img">
