Finished Projects section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Winter Morillo</title>
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="img/education.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
                 <h1>Hello,<span></span></h1>
                 <h1>My Name Is<span></span></h1>
                 <h1>Winter <span></span></h1>
-                <a href="#" type="button" class="cta">Portafolio</a>
+                <a href="#projects" type="button" class="cta">Portafolio</a>
             </div>
         </div>
     </section>
@@ -107,48 +107,30 @@
 
                 <div class="project-item"> 
                     <div class="project-info">
-                        <h1>Project</h1>
-                        <h2>Coding is Love</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, tenetur? Minima nemo suscipit deserunt nihil inventore quo nesciunt laborum, temporibus, possimus in est tempore illum consequatur dolores quasi totam rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid nobis quasi praesentium repudiandae, autem deleniti nisi iste, sunt blanditiis fugiat tenetur. Cumque quisquam iure quidem nulla odio fugit pariatur corrupti!</p>
+                        <h1>Blog de Cafe</h1>
+                        <h2>Do you like Coffe? <img src="img/coffee.png" alt="Imagen de Taza de cafe" class="info__coffee"></h2>
+                        <p>Here you will find a basic coffee blog, for those coffee lovers. I hope you enjoy it</p>
+
+                        <a href="https://wintermorillo.github.io/Blogcafe/" class="primary-cta" target="_blank">Visit</a>
                     </div>
 
                     <div class="project-img">
-                        <img src="./img/img-1.png" alt="img">
+                        <img src="img/Coffee blog.png" class="coffe-picture" alt="img">
                     </div>
                 </div>
 
                 <div class="project-item"> 
                     <div class="project-info">
-                        <h1>Project</h1>
-                        <h2>Coding is Love</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, tenetur? Minima nemo suscipit deserunt nihil inventore quo nesciunt laborum, temporibus, possimus in est tempore illum consequatur dolores quasi totam rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid nobis quasi praesentium repudiandae, autem deleniti nisi iste, sunt blanditiis fugiat tenetur. Cumque quisquam iure quidem nulla odio fugit pariatur corrupti!</p>
+                        <h1>Front End Store</h1>
+                        <h2>Want a t-shirt?<img src="img/t-shirt.png" alt="Imagen de t-shirt" class="info__coffee"> </h2>
+                        <p>This is a basic Front End Store layout, where T-shirts are being sold, project was created by using CSS grid
+                            which allow us to position this pictures in a very easy way.</p>
+
+                        <a href="https://wintermorillo.github.io/Front-End-Store/" class="primary-cta" target="_blank">Visit</a>
                     </div>
 
                     <div class="project-img">
-                        <img src="./img/img-1.png" alt="img">
-                    </div>
-                </div>
-
-                <div class="project-item"> 
-                    <div class="project-info">
-                        <h1>Project</h1>
-                        <h2>Coding is Love</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, tenetur? Minima nemo suscipit deserunt nihil inventore quo nesciunt laborum, temporibus, possimus in est tempore illum consequatur dolores quasi totam rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid nobis quasi praesentium repudiandae, autem deleniti nisi iste, sunt blanditiis fugiat tenetur. Cumque quisquam iure quidem nulla odio fugit pariatur corrupti!</p>
-                    </div>
-
-                    <div class="project-img">
-                        <img src="./img/img-1.png" alt="img">
-                    </div>
-                </div>
-
-                <div class="project-item"> 
-                    <div class="project-info">
-                        <h1>Project</h1>
-                        <h2>Coding is Love</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, tenetur? Minima nemo suscipit deserunt nihil inventore quo nesciunt laborum, temporibus, possimus in est tempore illum consequatur dolores quasi totam rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid nobis quasi praesentium repudiandae, autem deleniti nisi iste, sunt blanditiis fugiat tenetur. Cumque quisquam iure quidem nulla odio fugit pariatur corrupti!</p>
-                    </div>
-                    <div class="project-img">
-                        <img src="./img/img-1.png" alt="img">
+                        <img src="img/Front End Store.png" class="coffe-picture" alt="img">
                     </div>
                 </div>
             </div>
@@ -171,7 +153,7 @@
                 <h1 class="title">About <span>Me</span></h1>
                 <h2>Front End Web Develoment</h2>
                 <p>I graduated from System Engineer career. I have been teaching English since January 2019. Not only that, but I am a fast learner, and I am willing to learn when the need arises. So far I have a solid knowledge when it comes to HTML and CSS. So far I have a basic knowledge of JavaScript and continue learning every day about it. I am used to work under pressure. So far, I have been working in the call center industry for about 2 years now, which has helped me to develop my communications skill, since I need to deal with customers' issues and needs, I have held different positions, such as customer service and tech support representative, Back Office Agent, floor support, and Team Leader Supervisor.</p>
-                <a href="#" class="cta">Download Resume</a>
+                <a href="CV/My resume.pdf"  download ="My resume" class="cta" >Download Resume</a>
             </div>
         </div>
     </section>
