New project added

--- a/index.html
+++ b/index.html
@@ -87,6 +87,23 @@
                 <h1 class="title">Recent <span>Projects</span></h1>
             </div>
 
+            <!-- New project -->
+            <div class="project-item"> 
+                <div class="project-info">
+                    <h1>Music festival</h1>
+                    <h2>Do you like music? <img src="img/icono_edm.png" alt="Imagen de festival de musica" class="info__coffee"></h2>
+                    <p>Here you will find a music festival, with several presentations, using HTML, SASS, Gulp and JavaScript. I hope you enjoy it</p>
+
+                    <a href="https://wintermorillo.github.io/Festival-de-Musica/" class="primary-cta" target="_blank">Visit</a>
+                </div>
+
+                <div class="project-img">
+                    <img src="img/Festival de musica.png" class="coffe-picture" alt="img">
+                </div>
+            </div>
+
+                <!-- End New project -->
+
             <div class="all-projects">
                 <div class="project-item"> 
                     <div class="project-info">
