--- a/index.html
+++ b/index.html
@@ -49,30 +49,17 @@
     <section id="services">
         <div class="services container">
             <div class="service-top">
-                <h1 class="title">Serv<span>i</span>ces</h1>
-                <p>These are some of the areas in which I have worked so far, and the ones in which I am more experienced, of course there are others that I am 
-                    still working on them to improve.
-                </p>
+                <h1 class="title">Techno<span>l</span>ogies I work with</h1>
             </div>
 
             <div class="service-bottom">
-                <div class="service-item">
-                    <div class="icon">
-                        <img src="https://img.icons8.com/external-others-bomsymbols-/91/000000/external-bubbles-flat-communication-others-bomsymbols-.png"/>
-                        <h2>Web Develoment</h2>
-                        <p>I have a solid knowledge using HTML and CSS, which I am able to use to create the structure and create layouts depending on the client need.</p>
-                    </div>
-                </div>
-
-                <div class="service-item">
-                    <div class="icon">
-                        <img src="https://img.icons8.com/external-others-bomsymbols-/91/000000/external-bubbles-flat-communication-others-bomsymbols-.png"/>
-                        <h2>English Classes</h2>
-                        <p>I have been teaching english since 2019, and I have solid knowledge on how to teach others to learn the leanguage and how to use it in their 
-                            daily basics.
-                        </p>
-                    </div>
-                </div>
+                <img src="img/html-5.png" alt="" class="service-pictures">
+                <img src="img/css-3.png" alt="" class="service-pictures">
+                <img src="img/database.png" alt="" class="service-pictures">
+                <img src="img/git.png" alt="" class="service-pictures">  
+                <img src="img/github.png" alt="" class="service-pictures">
+                <img src="img/js.png" alt="" class="service-pictures">
+                <img src="img/sass.png" alt="" class="service-pictures">
             </div>
         </div>
     </section>
