Updated website to fully responsible on all versions

--- a/index.html
+++ b/index.html
@@ -146,18 +146,20 @@
     <!--About me Section-->
 
     <section id="about">
-        <div class="about container">
-            <div class="col-left">
-                <div class="about-img">
-                    <img src="./img/EncuadratE-2.jpg" alt="">
+        <div class="container">
+            <div class="about container">
+                <div class="col-left">
+                    <div class="about-img">
+                        <img src="./img/EncuadratE-2.jpg" alt="">
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-right">
-                <h1 class="title">About <span>Me</span></h1>
-                <h2>Front End Web Develoment</h2>
-                <p>I graduated from System Engineer career. I have been teaching English since January 2019. Not only that, but I am a fast learner, and I am willing to learn when the need arises. So far I have a solid knowledge when it comes to HTML and CSS. So far I have a basic knowledge of JavaScript and continue learning every day about it. I am used to work under pressure. So far, I have been working in the call center industry for about 2 years now, which has helped me to develop my communications skill, since I need to deal with customers' issues and needs, I have held different positions, such as customer service and tech support representative, Back Office Agent, floor support, and Team Leader Supervisor.</p>
-                <a href="CV/My resume.pdf"  download ="My resume" class="cta" >Download Resume</a>
+                <div class="col-right">
+                    <h1 class="title">About <span>Me</span></h1>
+                    <h2>Front End Web Develoment</h2>
+                    <p>I graduated from System Engineer career. I have been teaching English since January 2019. Not only that, but I am a fast learner, and I am willing to learn when the need arises. So far I have a solid knowledge when it comes to HTML and CSS. I have basic knowledge of JavaScript and I continue learning every day. I am used to work under pressure. So far, I have been working in the call center industry for about 2 years now, which has helped me to develop my communications skill, since I need to deal with customers' issues and needs, I have held different positions, such as customer service and tech support representative, Back Office Agent, floor support, and Team Leader Supervisor.</p>
+                    <a href="CV/My resume.pdf"  download ="My resume" class="cta" >Download Resume</a>
+                </div>
             </div>
         </div>
     </section>
